--- a/layout/templates/main.tmpl.html
+++ b/layout/templates/main.tmpl.html
@@ -4,6 +4,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>|||||</title>
+    <meta property="og:title" content="|||||" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://pesce.cc/images/ogimage.jpg" />
     <link rel="icon" href="/images/favicon.png">
     <link rel="stylesheet" href="/style/|||||.css">
   </head>
