feat: add content description and date
Add content description and date in frontmatter and show them in the
index below each image

--- a/layout/style/fonts.css
+++ b/layout/style/fonts.css
@@ -29,3 +29,11 @@
   font-display: swap;
   src: url('fonts/sans-medium-italic.woff2') format('woff2'),
 }
+
+@font-face {
+  font-family: 'mono';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url('fonts/mono-regular.woff2') format('woff2'),
+}
