--- a/public/style/index.css
+++ b/public/style/index.css
@@ -42,7 +42,7 @@
   margin-top: 1em;
 }
 
-.index__intro p:first-child, .index__intro h1 + p {
+.index__bio > p, .index__intro h1 + p {
   margin-top: 0;
 }
 
@@ -54,4 +54,12 @@
 
 .index__posts {
   margin: 8rem 0.5rem 0 0.5rem;
+}
+
+.index__posts figcaption {
+  text-transform: uppercase;
+  font-family: "mono", monospace;
+  font-size: 0.75rem;
+  line-height: 1.15;
+  margin-top: 0.25rem;
 }
