--- a/layout/templates/main.tmpl.html
+++ b/layout/templates/main.tmpl.html
@@ -27,6 +27,6 @@
         </svg>
       </a>
     </header>
-    {{.Content}}
+      {{block "content" .}}No content implemented{{end}}
   </body>
 </html>
