--- a/layout/style/|||||.css
+++ b/layout/style/|||||.css
@@ -7,6 +7,8 @@
 
 html {
   font-family: "sans", -apple-system, system-ui, BlinkMacSystemFont, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 header {
