--- a/layout/templates/index.tmpl.html
+++ b/layout/templates/index.tmpl.html
@@ -32,7 +32,7 @@
     {{- if ne .Thumbnail "" -}}
       <grid-cell {{if eq .ThumbnailWide "true"}}span="2" span-sm="row"{{end}}>
         <figure>
-        <img src="{{.Thumbnail}}"/>
+        <img loading="lazy" src="{{.Thumbnail}}" alt="{{.Title}}" />
           {{- if ne .Caption "" -}}
             <figcaption>
               {{.Caption}}
