--- a/layout/templates/index.tmpl.html
+++ b/layout/templates/index.tmpl.html
@@ -4,7 +4,7 @@
     <grid-cell span="4" span-sm="row">
       <h1>João Pesce</h1>
       <p>
-        Curiosity-driven, detail-oriented creator of digital products. Every day fighting chaos.
+        Curiosity-driven, detail-oriented creator of digital artefacts. Every day fighting chaos.
       </p>
     </grid-cell>
     <grid-cell span="8" span-sm="row" columns="2" columns-sm="1" class="index__bio">
