--- a/layout/style/index.css
+++ b/layout/style/index.css
@@ -7,7 +7,7 @@
   margin: 8rem 5rem 0 5rem;
 }
 
-@media (max-width: 40em) {
+@media (width <= 40em) {
   .index__intro {
     margin: 1rem 1.25rem 0 1.25rem;
   }
@@ -46,7 +46,7 @@
   margin-top: 0;
 }
 
-@media (max-width: 40em) {
+@media (width <= 40em) {
   .index__bio {
     margin-top: 3rem;
   }
