--- a/layout/templates/main.tmpl.html
+++ b/layout/templates/main.tmpl.html
@@ -29,7 +29,7 @@
     </header>
       {{block "content" .}}No content implemented{{end}}
     <footer class="wrapper">
-      &#127279; 2024<br>
+      <span class="copyleft">©</span> 2024<br>
       <a href="/meta">Meta</a>
     </footer>
   </body>
