feat: add IndieAuth via IndieAuth.com
Add IndieAuth following the instructions in the IndieWeb wiki:
https://indieweb.org/IndieAuth
- Add rel-me links to your homepage for various ways to reach you, e.g.
  <a href="https://github.com/aaronpk" rel="me">GitHub</a>
- Make sure any social media profiles you linked to have a link back to
  your homepage.
- Finally, include <link rel="authorization_endpoint"
  href="https://indieauth.com/auth"> on your homepage.

--- a/layout/templates/main.tmpl.html
+++ b/layout/templates/main.tmpl.html
@@ -17,6 +17,7 @@
     />
     <link rel="icon" href="/images/favicon.png" />
     <link rel="stylesheet" href="/style/|||||.css" />
+    {{- block "head" .}}{{end}}
   </head>
   <body>
     <header>
