--- a/layout/templates/index.tmpl.html
+++ b/layout/templates/index.tmpl.html
@@ -1,3 +1,7 @@
+{{- define "head"}}
+<link rel="me" href="https://github.com/jpesce" />
+<link rel="authorization_endpoint" href="https://indieauth.com/auth">
+{{- end}}
 {{- define "content" -}}
 <div class="index">
   <grid columns-sm="1" class="index__intro">
